apps/app-demo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  labels:
    app.kubernetes.io/name: app-demo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: crc-gitops-lab
    app.kubernetes.io/version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-demo
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: crc-gitops-lab
        app.kubernetes.io/version: v2
    spec:
      containers:
        - name: app-demo
          image: registry.access.redhat.com/ubi9/httpd-24:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: html-content
              mountPath: /var/www/html/index.html
              subPath: index.html
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: html-content
          configMap:
            name: app-demo-content
            items:
              - key: index.html
                path: index.html
